added user roles
